# yadro

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
googletest/: CMakeLists.txt
src/: CMakeLists.txt  yadro.cpp
